--- a/style.css
+++ b/style.css
@@ -2,3 +2,10 @@
   --body-bg-color: #faf7fd;
   --purple: #bb99dd;
 }
+
+* {
+  font-family: 'Poppins', sans-serif;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
